<resources>
    <string name="app_name">Smart UMKM</string>
    <string name="tagline">Change the way you live in the future</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_desc">Hello, welcome back\nto our account</string>
    <string name="login_title">Login Account</string>
    <string name="create_account">Create Account</string>
    <string name="harga">Harga</string>
    <string name="harian">Harian</string>
    <string name="bulanan">Bulanan</string>
    <string name="tahunan">Tahunan</string>
    <string name="smart_laba">Smart Laba</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="more">More</string>
    <string name="smart_modal">Smart Modal</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="complete_name">Complete Name</string>
    <string name="pengajuan_kredit">Pengajuan Kredit</string>
    <string name="investasi">Investasi</string>
    <string name="properti">Properti</string>
    <string name="smart_harga">Smart Harga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_acara_kategori_rekomendasi">Rekomendasi</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="deskripsi_acara">Content creation adalah kemampuan dalam membuat dan mengelola konten digital seperti mengelola website, artikel web, desain grafis, video editing dan konten digital lainnya sangat dibutuhkan sebagai media promosi.</string>
    <string name="durasi_acara"><b>Durasi Pelatihan :</b> \n%1$d Hari</string>
    <string name="manfaat_acara"><b>Manfaat Pelatihan:</b>\n%1$s</string>
    <string name="registrasi_acara"><b>Registrasi:</b>\n%1$s</string>
    <string name="penyelenggara_acara"><b>Diselenggarakan oleh:</b>\n%1$s</string>
    <string name="daftar">Daftar</string>
    <string name="pelaksanaan_acara">Pelaksanaan: %1$s - %2$s</string>
    <string name="kuota">Kuota: %1$s orang</string>
    <string name="confirmed_desc">You’ll will get an email along with your booking confirmation</string>
    <string name="confirmed">Terkonfirmasi</string>
    <string name="smart_pasar">Smart Pasar</string>
</resources>